<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".ui.inspection.InspectionFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/horizontal_padding">

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:ems="20"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintBottom_toBottomOf="@+id/nameLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nameLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:text="Hive Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/frameCountLabel"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="Frame Count"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameLabel"
                tools:ignore="HardcodedText" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/frameCountLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sizeLabel"
                app:layout_constraintTop_toTopOf="@+id/frameCountLabel"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/sizeLabel"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:text="Hive Size"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/hiveSizeInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameCountLabel"
                tools:ignore="HardcodedText" />

            <Spinner
                android:id="@+id/hiveSizeInput"
                android:layout_width="160dp"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="@+id/sizeLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sizeLabel" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="Save"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sizeLabel"
                tools:ignore="HardcodedText" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>