<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_yard_view"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Yard View"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/navigation_hive_list"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="List of Hives"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_hive_form_foreground"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
