<resources>
    <!-- main title strings -->
    <string name="app_name">TheHiveApp_Android</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- basic -->
    <string name="notes">Notes</string>
    <!-- numbers-->
    <!-- inspection log titles-->
    <string name="honey_count">Honey Count</string>
    <string name="pollen_count">Pollen Count</string>
    <string name="brood_count">Brood Count</string>
    <string name="seen_queen">Did you see the queen?</string>
    <string name="seen_eggs">Did you see new eggs?</string>
    <string name="mite_check">Did you see mites?</string>
    <!-- reminders -->
    <string name="notification_channel_description">This is a sample notification channel for demonstration purpose.</string>
    <string name="pick_time">Set reminder</string>
    <string name="cancelNotification">Clear all</string>

    <string-array name="frame_size_array">
        <item>Shallow (5 3/8")</item>
        <item><![CDATA[Medium (6 &#188;")]]></item>
        <item>Deep (9 1/8")</item>
    </string-array>
</resources>
